# lets-talk

./: .dockerignore  .env.example  .gitignore  01_Dealing_with_the_Data.ipynb  BLOG_DATA_UTILS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  Dockerfile.chainlit  ENVIRONMENT_VARIABLE_UPDATE.md  FRONTEND_README.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PIPELINE_SCHEDULING_IMPLEMENTATION.md  README.md  REPORT.md  SECURITY.md  alembic.ini  app.py  blog_utils.py  chainlit.md  config.py  debug_backup.py  demo_pipeline.py  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  generate_api_keys.py  langgraph.json  main.py  migrate.sh  nginx-startup.sh  nginx.conf.template  pyproject.toml  pytest.ini  run_pytest_tests.py  start-docker.sh  start_backend_dev.sh  (+13 more)
.chainlit/: config.toml
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-vector-store.yml  copilot-setup-steps.yml  docker-build.yml  python-ci.yml
backend/: app.py
backend/alembic/: env.py
backend/lets_talk/: __init__.py  main.py
backend/lets_talk/api/: main.py  (+1 more)
backend/notebooks/: 00_playground.ipynb  05_SDG_Eval.ipynb
data/advanced-metrics-and-customization-with-ragas/: index.md
data/basic-evaluation-workflow-with-ragas/: index.md
data/building-feedback-loops-with-ragas/: index.md
data/building-research-agent/: index.md
data/coming-back-to-ai-roots/: index.md
data/data-is-king/: index.md
data/evaluating-ai-agents-with-ragas/: index.md
data/evaluating-rag-systems-with-ragas/: index.md
data/generating-test-data-with-ragas/: index.md
data/integrations-and-observability-with-ragas/: index.md
data/introduction-to-ragas/: index.md
data/langchain-experience-csharp-perspective/: index.md
data/metric-driven-development/: index.md
data/rss-feed-announcement/: index.md
docs/: ACCESS_CONTROL_README.md  API_DOCUMENTATION.md  ARCHITECTURE.md  CHUNKING_STRATEGY_ENUM_COMPLETION_REPORT.md  DATABASE_MIGRATIONS.md  DATABASE_MIGRATION_SETUP.md  DEFAULT_JOB_CONFIGURATION.md  ENTRYPOINT_IMPLEMENTATION.md  ENVIRONMENT_VARIABLE_UPDATE.md  FINAL_RESTRUCTURING_REPORT.md  FINAL_STATUS.md  FINAL_STATUS_REPORT.md  FIRST_TIME_STARTUP.md  FIRST_TIME_STARTUP_QUICK_REFERENCE.md  FRONTEND_SCRIPT_BUG_FIXES.md  FRONTEND_SCRIPT_ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INCREMENTAL_INDEXING_FINAL_REPORT.md  MIGRATION_GUIDE.md  MIGRATION_IMPLEMENTATION_SUMMARY.md  PIPELINE_CONFIG_TEMPLATE.env  PIPELINE_QUICK_REFERENCE.md  PIPELINE_SCHEDULING_API.md  PIPELINE_SCHEDULING_IMPLEMENTATION.md  PIPELINE_USAGE_GUIDE.md  PYTEST_CONVERSION_SUMMARY.md  README.md  REFACTORING_REPORT.md  RESTRUCTURING_COMPLETION_REPORT.md  SCHEDULER.md  SCHEDULER_IMPLEMENTATION_REPORT.md  SELF_HOSTING_GUIDE.md  SEMANTIC_CHUNKING_CONFIG.md  SEMANTIC_CHUNKING_IMPLEMENTATION.md  STARTUP_CONSOLIDATION_SUMMARY.md  production_scheduler_config.json  scheduler_config_example.json  shadcn-svelte-guide.md
evals/: ft_questions.csv  rag_eval.csv  rag_eval_2.csv  rag_eval_ft.csv  rag_eval_result.csv  rag_eval_result_2.csv  rag_eval_result_ft.csv  testset.csv  testset_2.csv
examples/: schedule_pipeline_demo.py  semantic_chunking_demo.py
frontend/: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: app.css
py-src/: app.py  pipeline.py
py-src/examples/: contact_form_example.py
py-src/lets_talk/: __init__.py  agent.py  agent_v2.py  chains.py  config.py  main.py  models.py  pipeline.py  pipeline_job.py  prompts.py  rag.py  rss_tool.py  scheduler.py  scheduler_cli.py  simple_pipeline_job.py  state.py  tools.py  webapp.py
scripts/: build-vector-db.sh  build-vector-store.sh  final_validation.sh  start.sh  storage_entrypoint_example.sh  test_api_access.sh  test_api_first_time.py  test_cors.sh  test_cors_domains.sh  test_default_job.py  test_incremental_system.sh  verify_nginx_template.sh
stats/: blog_stats_20250510_161540.json  blog_stats_20250510_175233.json  blog_stats_20250510_175446.json  blog_stats_20250510_175724.json  blog_stats_20250510_180045.json  blog_stats_20250511_095935.json  blog_stats_20250511_100823.json
tests/: HEALTH_CHECKER_TEST_SUMMARY.md  PERFORMANCE_MONITOR_TEST_SUMMARY.md  README_backup_manager_tests.md  README_document_loader_tests.md  README_health_checker_tests.md  README_metadata_manager_tests.md  README_optimization_service_tests.md  README_performance_monitor_tests.md  README_vector_store_manager_tests.md  VECTOR_STORE_MANAGER_TEST_SUMMARY.md  debug_scheduler.py  diagnose_scheduler.py  run_backup_manager_tests.py  run_document_loader_tests.py  run_health_checker_tests.py  run_metadata_manager_tests.py  run_optimization_service_tests.py  run_performance_monitor_tests.py  run_vector_store_manager_tests.py  test_backup_manager_pytest.py  test_basic_imports.py  test_chunking_service_semantic_pytest.py  test_chunking_strategy.py  test_document_loader.py  test_document_loader_comprehensive.py  test_document_loader_comprehensive_pytest.py  test_document_loader_pytest.py  test_document_loader_simple.py  test_document_loader_simple_pytest.py  test_final_scheduler.py  test_health_checker_comprehensive_pytest.py  test_health_checker_pytest.py  test_health_checker_simple_pytest.py  test_metadata_manager.py  test_minimal_scheduler.py  test_optimization_service_comprehensive_pytest.py  test_optimization_service_edge_cases_pytest.py  test_performance_monitor_comprehensive_pytest.py  test_performance_monitor_pytest.py  test_persistent_jobs.py  (+12 more)
(+142 files in other folders)
