[project]
name = "lets-talk"
version = "0.1.0"
description = "Let's Talk is AI driven chat for websites"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "arxiv>=2.2.0",
    "beautifulsoup4>=4.13.4",
    "feedparser>=6.0.11",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-core>=0.3.59",
    "langchain-ollama>=0.3.2",
    "langchain-openai>=0.3.16",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.8",
    "langchain-together>=0.3.0",
    "langgraph>=0.4.3",
    "libmagic>=1.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.14.2",
    "tqdm>=4.67.1",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "ipywidgets>=8.1.7",
    "ragas>=0.2.15",
    "grandalf>=0.8",
    "langgraph-cli[inmem]>=0.2.10",
    "langchain-huggingface>=0.2.0",
    "unstructured[md]>=0.17.2",
    "chainlit>=2.5.5",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "py-src"}

[tool.setuptools.packages.find]
where = ["py-src"]
