[project]
name = "lets-talk"
version = "0.1.5"
description = "Let's Talk is AI driven chat for websites"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "apscheduler>=3.11.1",
    "arxiv>=2.3.1",
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.121.2",
    "feedparser>=6.0.12",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.80",
    "langchain-experimental>=0.3.4",
    "langchain-ollama>=0.3.10",
    "langchain-openai>=0.3.35",
    "langchain-qdrant>=0.2.1",
    "langchain-text-splitters>=0.3.11",
    "langchain-together>=0.3.1",
    "langgraph>=0.4.5,<1.0",
    "libmagic>=1.0",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "pydantic>=2.12.4",
    "qdrant-client>=1.16.0",
    "rank-bm25>=0.2.2",
    "sqlalchemy>=2.0.44",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
    "python-frontmatter>=1.1.0",
    "alembic>=1.17.2",
]


[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[dependency-groups]
dev = [
    "matplotlib>=3.10.7",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "ipywidgets>=8.1.8",
    "ragas>=0.3.9",
    "grandalf>=0.8",
    "langgraph-cli[inmem]>=0.3.6",
    "langchain-huggingface>=0.3.1",
    "unstructured[md]>=0.18.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
